# dns_json

./: README.md  pyproject.toml  setup.py
src/dns_json/: resolver.py
