[project]
name = "dns_json"
version = "0.0.3"
description = "DNS over HTTPS with JSON Format"
authors = [
    {name = "Michael Brux"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["dns", "json", "resolver"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

